5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1582_1332.log
== TEST (2019-03-14 17:51:38) 
-- CODE:
aresta =5 
area = 25
 
print(round(area, 4))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:39:53) 
-- CODE:
aresta =5 
area = (3/2*3*a**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2*3*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:40:11) 
-- CODE:
aresta =5 
area = (3/2*3*1**2)
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:40:27) 
-- CODE:
aresta =5 
area = (3/2*3*1**2)
 
print(round(area, 4,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4,2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:41:00) 
-- CODE:
aresta =5 
area = (3/2*3*5**2)
 
print(round(area, 4,))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:41:22) 
-- CODE:
aresta =5 
area = (3/2*3*5**2)
 
print(round(area,112, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,112, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:41:38) 
-- CODE:
aresta =5 
area = (3/2*3*5**2)
 
print(round(,112, 4))
-- ERROR:
File "XXXX", line 4
    print(round(,112, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:43:45) 
-- CODE:
aresta =5 
area = (3/2*(3)**2*5**2)
 
print(round(,112, 4))
-- ERROR:
File "XXXX", line 4
    print(round(,112, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:44:01) 
-- CODE:
aresta =5 
area = (3/2*(3)**2*5**2)
 

-- ERROR:
File "XXXX", line 4
    print(round(,112, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 08:44:07) 
-- CODE:
aresta =5 
area = (3/2*(3)**2*5**2)
 

-- EXECUTION TIME:
0.175998
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:44:19) 
-- CODE:
aresta =5 
area = (3/2*(3)**2*5**2)
 

-- ERROR:
File "XXXX", line 4
    print(round(,112, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:44:43) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 

-- ERROR:
File "XXXX", line 4
    print(round(,112, 4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 08:44:47) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 

-- EXECUTION TIME:
0.176178
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:45:48) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:46:09) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:46:43) 
-- CODE:
aresta =5 
area = (3/2(3)**0,5*5**2)
 
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2(3)**0,5*5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:46:52) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:01:20) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:01:30) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:01:45) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:03:29) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:03:34) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 09:03:37) 
-- CODE:
aresta =5 
area = (3/2*(3)**0,5*5**2)
 
print(round(22, 4))
-- EXECUTION TIME:
0.129798
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:04:31) 
-- CODE:
aresta =5 
area =(3/2*(3)**0,5*5**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:04:39) 
-- CODE:
aresta =5 
area=(3/2*(3)**0,5*5**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 09:04:44) 
-- CODE:
aresta =5 
area=(3/2*(3)**0,5*5**2)
 
print(round(22, 4))
-- EXECUTION TIME:
0.160524
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:04:52) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*5**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:10:03) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*1**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:10:12) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*n**2)
 
print(round(22, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(3//2*(3)**0,5*n**2)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:10:30) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*5**2)
 
print(round(22, 4))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:11:50) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:12:16) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*5**2)
 
print(round(area,22 4))
-- ERROR:
File "XXXX", line 4
    print(round(area,22 4))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:12:26) 
-- CODE:
aresta =5 
area=(3//2*(3)**0,5*5**2)
 
print(round(area,22, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,22, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:35:33) 
-- CODE:
aresta =5 
area=print(3//2*(3)**0,5*5**2)
 
print(round(area,22 4))
-- ERROR:
File "XXXX", line 4
    print(round(area,22 4))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:36:16) 
-- CODE:
aresta =5 
area=print(3//2*(3)**0,5*5**2)
 
print(round("area",22 4))
-- ERROR:
File "XXXX", line 4
    print(round("area",22 4))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 08:53:19) 
-- CODE:
aresta =5 
area=print(3//2*(3)**0,5*5**2)
 
print(round("area",22 4))
-- EXECUTION TIME:
0.291405
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round("area",22 4))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:04:08) 
-- CODE:
aresta =(5)
area = print(3/2*(3)**0,5*5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:05:25) 
-- CODE:
aresta =(5)
area = print(3/2*(3)**0,5*5**2)
 
print(round(22,5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(22,5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:06:06) 
-- CODE:
aresta =(5)
area = print(3/2*(3)**0,5*5**2)
 
print(round(3/2, 4))
-- OUTPUT:
1.5 125
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:06:13) 
-- CODE:
aresta =(5)
area = print(3/2*(3)**0,5*5**2)
 
print(round(3/2, 4))
-- EXECUTION TIME:
0.203139
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.5 125
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:06:23) 
-- CODE:
aresta =(5)
area = print(1,5*(3)**0,5*5**2)
 
print(round(3/2, 4))
-- OUTPUT:
1 5 125
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:10:28) 
-- CODE:
aresta =(5)
area = print(1,5*(225)**0,5)
 
print(round(3/2, 4))
-- OUTPUT:
1 5 5
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:10:37) 
-- CODE:
aresta =(5)
area = print(1,5*(225)**0,5)
 
print(round(3/2, 4))
-- EXECUTION TIME:
0.291113
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 5 5
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:11:04) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(3/2, 4))
-- OUTPUT:
1 75
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:11:09) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(3/2, 4))
-- EXECUTION TIME:
0.134262
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 75
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:12:01) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(22,5/2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(22,5/2, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:12:18) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(23/2, 4))
-- OUTPUT:
1 75
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:12:22) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(23/2, 4))
-- EXECUTION TIME:
0.226363
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 75
11.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:13:12) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(225/4, 4))
-- OUTPUT:
1 75
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:13:21) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(225/4, 4))
-- EXECUTION TIME:
0.191473
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 75
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:13:36) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(15/4, 4))
-- OUTPUT:
1 75
3.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:13:40) 
-- CODE:
aresta =(5)
area = print(1,5*15)
 
print(round(15/4, 4))
-- EXECUTION TIME:
0.177937
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 75
3.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:14:54) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(15/4, 4))
-- OUTPUT:
1 5 5
3.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:15:11) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(155/4, 4))
-- OUTPUT:
1 5 5
38.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:15:15) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(155/4, 4))
-- EXECUTION TIME:
0.160065
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 5 5
38.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:15:26) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(1 5 5/4, 4))
-- ERROR:
File "XXXX", line 4
    print(round(1 5 5/4, 4))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:15:50) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(155, 4))
-- OUTPUT:
1 5 5
155
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:16:01) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(155, 4))
-- EXECUTION TIME:
0.178198
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 5 5
155
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:18:21) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(225/2, 4))
-- OUTPUT:
1 5 5
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:18:25) 
-- CODE:
aresta =(5)
area = print(1,5*(75)**0,5)
 
print(round(225/2, 4))
-- EXECUTION TIME:
0.163534
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1 5 5
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 10:18:44) 
-- CODE:
aresta =(5)
area = (225)
 
print(round(225/2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 10:19:04) 
-- CODE:
aresta =(5)
area = (225)
 
print(round(225/2, 4))
-- EXECUTION TIME:
0.140421
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:07:28) 
-- CODE:
aresta =(5)
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:07:33) 
-- CODE:
aresta =(5)
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.192678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:09:46) 
-- CODE:
aresta =(5)
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:10:03) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:10:03) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:10:07) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area,4))
-- EXECUTION TIME:
0.170232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:10:25) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*(aresta**2)
 
print(round(area,4))
-- EXECUTION TIME:
0.160208
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:03:58) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*(aresta**2)
 
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:04:14) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*(aresta**2)
 
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:27:58) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*(aresta**2)
 
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
